deploy/demo/bookinfo/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: bookinfo
  labels:
    name: bookinfo
    istio-injection: enabled
